<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_set_order"
        android:title="@string/all"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/order_by_text"
                android:title="@string/order_by_content"/>
            <item android:id="@+id/order_by_creation_date"
                android:title="@string/order_by_creation_date"/>
            <item android:id="@+id/reversed"
                android:title="@string/reversed"
                android:checkable="true"
                android:checked="false"/>
        </menu>
    </item>

    <item android:id="@+id/action_set_filter"
        android:title="@string/all"
        android:icon="@drawable/ic_filter_list_24"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/filter_show_all"
                android:title="@string/all"/>
            <item android:id="@+id/filter_show_finished_only"
                android:title="@string/finished_only"/>
        </menu>
    </item>

</menu>